added important note to readme.md